# pombase-gocam-tool

./: Cargo.toml  LICENSE  README.md
.github/workflows/: clippy.yaml  rust.yml
src/: allowed_relation_check.rs  allowed_relation_config.rs  go_format_writer.rs  main.rs  obsolete_terms.rs  ontology_closure.rs  ontology_info.rs
tests/data/: 67ae98b500000055.yaml  closure.tsv  config.tsv
