[package]
name = "pombase-gocam-tool"
version = "0.36.0"
edition = "2021"

[dependencies]
pombase-gocam-process = { git = "https://github.com/pombase/pombase-gocam-process.git", version = "0.103.0" }
pombase-gocam = "0.90.0"
clap = { version = "4.5.30", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
petgraph = "0.8"
