[package]
name = "pombase-gocam-tool"
version = "0.63.0"
edition = "2024"
rust-version = "1.94"
resolver = "3"

[dependencies]
pombase-gocam-process = { git = "https://github.com/pombase/pombase-gocam-process.git", version = "0.135.0" }
pombase-gocam = "0.114.0"
clap = { version = "4.5.30", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
petgraph = "0.8"

[profile.dev]
opt-level = 0
debug = true
incremental = true
lto = "off"

[profile.releasedev]
inherits = "release"
opt-level = 1
debug = true
codegen-units = 256
incremental = true
lto = "off"

[profile.release]
opt-level = 3
codegen-units = 1
debug = true
lto = true
